Fix uneccessary overflow hidden on the switch container. Adds sizes to vue switch.

--- a/agnosticui-css/switch.css
+++ b/agnosticui-css/switch.css
@@ -6,8 +6,7 @@
  */
 .switch-container {
   display: block;
-  overflow: hidden;
-  padding: 0.5em;
+  padding: 0.5rem;
   position: relative;
 }
 
